--- a/opensap-python-course/openSAP_python1_Week_2_Unit_6_sequences_notebook.ipynb
+++ b/opensap-python-course/openSAP_python1_Week_2_Unit_6_sequences_notebook.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -62,18 +62,11 @@
       "Number 10 in list? False\n",
       "String contains s! True\n",
       "The range contains the number 27: False\n",
-      "Those strings were concatenated\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'int' and 'range'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9548/3960492341.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Those str\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"ings were concatenated\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mrange_100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist_l\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'int' and 'range'"
+      "Those strings were concatenated\n",
+      "1\n",
+      "['ab', 'abab', 'b', 'bab']\n",
+      "ab\n",
+      "a\n"
      ]
     }
    ],
@@ -90,9 +83,13 @@
     "\n",
     "print(\"Those str\" + \"ings were concatenated\")\n",
     "\n",
-    "print(5 * range_100)\n",
+    "#print(5 * range_100)\n",
     "\n",
-    "print(min(list_l))"
+    "print(min(list_l))\n",
+    "stringlist = [\"b\", \"ab\",\"bab\",\"abab\"]\n",
+    "print(sorted(stringlist))\n",
+    "print(min(stringlist))\n",
+    "print(min(\"abab\"))"
    ]
   },
   {
